--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     "minio_port": 9000,
     "minio_access_key": "minioadmin",
     "minio_secret_key": "minioadmin",
-    "minio_bucket": "news-bucket",
+    "minio_bucket": "a-bucket",
     "remote_data_path": "parquet"
   },
   "BatchReader": {
@@ -42,7 +42,7 @@
     "schema": null,
     "output_dir": "parquet",
     "max_records_per_file": 100000,
-    "max_file_size_mb": 512,
+    "segment_size_mb": 512,
     "max_files": 8,
     "max_return_files": 4,
     "log_file": "./logs/parquet_operations.log",
