--- a/config.json
+++ b/config.json
@@ -24,10 +24,10 @@
     "remote_data_path": "parquet"
   },
   "BatchReader": {
-    "file_path": "",
+    "file_path": "./test_data.jsonl",
     "start": 1,
     "end": null,
-    "batch_size": 1000
+    "batch_size": 32
   },
   "ParquetFile": {
     "output_dir": "parquet",
@@ -41,10 +41,10 @@
   "MilvusBulkWriter": {
     "schema": null,
     "output_dir": "parquet",
-    "max_records_per_file": 100000,
+    "max_records_per_file": 10000,
     "segment_size_mb": 512,
-    "max_files": 8,
-    "max_return_files": 4,
+    "max_files": 10,
+    "max_return_files": 5,
     "log_file": "./logs/parquet_operations.log",
     "metadata_file": "./logs/parquet_metadata.json"
   },
